Aplicando CSS no formulário

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -105,7 +105,7 @@ form {
     margin: 40px 0;
 }
 
-form label, form p {
+form label, form legend {
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
@@ -120,4 +120,23 @@ form label, form p {
 
 .checkbox {
     margin: 20px 0 ;
+}
+
+.enviar{
+    width: 40%;
+    padding: 15px 0;
+    background: #ec8c1d;
+    color: #FFFFFF;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+}
+
+.enviar:hover {
+    background: #a05806;
+    text-decoration: underline;
+    transform: scale(1.2);
 }
