--- a/CSS/style.css
+++ b/CSS/style.css
@@ -243,6 +243,7 @@ td, th {
     width: 60%;
     opacity: 1;
     transition: 200ms;
+    box-shadow: 10px 10px 10px #000000;
 }
 
 .imagem-beneficios:hover {
@@ -252,4 +253,22 @@ td, th {
 .video {
     width: 560px;
     margin: 2em auto;
+}
+
+@media screen and (max-width: 480px) {
+    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+        width: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+    }
+
+    .lista-beneficios, .imagem-beneficios {
+        width: 100%;
+    }
 }
